refactor: Rename TankerLogistics to WaterDistributionOperations; refine migrations
- Renamed the entire `TankerLogistics` module to `WaterDistributionOperations`, including directory, namespaces, controller, providers, Composer configuration, and Vite setup
- Moved all associated migrations from the old `TankerLogistics` path to the new `WaterDistributionOperations` module, updating their timestamps
- Added `create_reservoirs_activity_table` migration to the `WaterDistributionOperations` module
- Refined `beneficiaries` table migration by adjusting its index and removing the spatial index on `location`
- Removed old `water_quality_testing_parameters` and `water_sources_water_quality_testing_parameter` migrations from `WaterSources` module
- Introduced new `water_source_parameters` migration for a revised water quality parameter linking approach in `WaterSources`
- Updated `modules_statuses.json` to enable the new `WaterDistributionOperations` module

This consolidates and clarifies the domain, enhances location data handling for beneficiaries, and updates water quality parameter management within the modular architecture.

--- a/Modules/WaterDistributionOperations/composer.json
+++ b/Modules/WaterDistributionOperations/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/tankerlogistics",
+    "name": "nwidart/waterdistributionoperations",
     "description": "",
     "authors": [
         {
@@ -17,14 +17,14 @@
     },
     "autoload": {
         "psr-4": {
-            "Modules\\TankerLogistics\\": "app/",
-            "Modules\\TankerLogistics\\Database\\Factories\\": "database/factories/",
-            "Modules\\TankerLogistics\\Database\\Seeders\\": "database/seeders/"
+            "Modules\\WaterDistributionOperations\\": "app/",
+            "Modules\\WaterDistributionOperations\\Database\\Factories\\": "database/factories/",
+            "Modules\\WaterDistributionOperations\\Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Modules\\TankerLogistics\\Tests\\": "tests/"
+            "Modules\\WaterDistributionOperations\\Tests\\": "tests/"
         }
     }
 }
