--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/tinker": "^2.10.1",
         "matanyadaev/laravel-eloquent-spatial": "^4.5",
         "nwidart/laravel-modules": "^12.0",
-        "spatie/laravel-medialibrary": "^11.13"
+        "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-medialibrary": "^11.13",
+        "spatie/laravel-translatable": "^6.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
